--- Thursday 2011-11-24 ---
* The word of the day: lexicographic order.
* Started thinking about caching certain things.
* One of them: coordination calculation. jsPerf tests showed it can boost
  efficiency by 800%, but I had drawing problems because of them. So I had to
  disable it again (at least for 2 out of 3 functions)
* Autotile caching. That's where the caching idea came from. Works fine:
  Fake fps went from 47-50 to 60-62 while walking.

--- Wednesday 2011-11-23 ---
* Autotiles (The big RPG Maker kind, anyway) have been fully implemented!
  There's a smaller type too, with only 4 basetiles in stead of 5, but it's not
  that urgent.
* Autotiles are even animated. (Autotile detection happens VERY low, right
  before the actual draw on the canvas in fact)
* Made a bit of a mess. The autotiles code needs lots of clean-up work.

--- Tuesday 2011-11-22 ---
* Did more research about the autotiles, and finally found the key, which is:
  [5,  7,  5,  7,  13, 1,  13, 15]
  [8,  6,  8,  6,  16, 2,  16, 14]
  [17, 19, 17, 19, 9,  3,  9,  11]
  [20, 18, 20, 18, 12, 4,  12, 10]

--- Monday 2011-11-21 ---
* Finally fixed "off-line" processing of walkable tiles. (This now gets done
  after the last tileset image has been loaded.) This will also happen for
  on-line clients, but it will have no effect on them.
* Moved the drawing of the debug grid from the renderFrame to the canvas (will
  now happen after a flush)
* Moved the canvas class to its own file (kiflea.canvas.js)
  It was getting too big.
* Moved FPS-measuring to the Canvas class, and improved it:
  FPS data are now calculated mean averages.
* Improvements to the dirty rectangles code.
* Found a bug (that still needs fixing): all objects on the current map are
  drawn, no matter where they are. That needs to be fixed.
* Fixed the echo functions. innerHTML is not passed by reference. Stupid mistake
* Started very early work of the autotile feature: added a new tileset and